--- a/EJERCICIO REPASO TABLAS/TEMA CSS/CSS/css3.css
+++ b/EJERCICIO REPASO TABLAS/TEMA CSS/CSS/css3.css
@@ -14,7 +14,7 @@ background-position: 50% 50%;
 #p{
 
     background-color: aquamarine;
-    background-attachment: ;
-
+    background-attachment: 
+    
 }
 
