--- a/DIVS/EjerEtiquetasSemanticas.css
+++ b/DIVS/EjerEtiquetasSemanticas.css
@@ -1,3 +1,6 @@
+header{
+    display: flex;
+}
 #div1{
     background-color: blueviolet;
     margin-right: 90%;
@@ -5,32 +8,27 @@
 }
 #nav{
     background-color: blue;
+   
 }
 #div3{
     background-color: rgb(69, 69, 162);
     float: right;
 }
 #div2{
-    height: auto;
-    width: auto;
+    
     float: left;
-    margin-right: 30%;
+    
 }
 #div4{
-    height: auto;
-    width: auto;
-    margin-left: 31%;
-    margin-right: 69;
+   
     float: left;
 }
 #div5{
-    height: auto;
-    width: auto;
-    margin-left: 30%;
+    
+   
     float: right;
 }
 #div6{
     float: left;
-    width: 50px;
-    height: 50px;
+    
 }
