--- a/JAVASCRIPTDOM/Ejercicio12Apuntes/css.css
+++ b/JAVASCRIPTDOM/Ejercicio12Apuntes/css.css
@@ -3,3 +3,35 @@
     color: red;
     font-weight: bold;
 }
+.efectosboton1a {
+
+    background-color: yellow;
+    color: blue;
+
+}
+.efectoParrafo{
+
+    text-shadow: 1px 2px orange, 3px 5px pink;
+
+}
+.efectoBoton2li{
+
+    background-color: pink;
+    width: 20%;
+}
+.efectoboton2p {
+
+    color: yellow;
+
+
+}
+.efectoboton2{
+    background-color: black;
+    border: 1px solid red;
+}
+.efectosombraboton2{
+
+    font-style: italic;
+    color: rgb(109, 194, 243);
+
+}
